web-infras/parser/tests/fixtures/babel/es2015/yield/parameter-default-inside-arrow-inside-generator-2/output.txt
[SyntaxError]: yield expression can not used in parameter list (2,16)
2|  (x = 3 + a.b(yield) ** 2) => {};
 |              ^
